--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "knex": "^3.1.0",
-    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "pg": "^8.12.0",
     "pg-native": "^3.1.0"
   },
