--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.13.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "pg": "^8.12.0",
     "pg-native": "^3.1.0"
   },
