--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +20,11 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pg": "^8.12.0",
-    "pg-native": "^3.1.0"
+    "pg-native": "^3.1.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
