--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "ioredis": "^5.4.1",
     "joi": "^17.13.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
