api measurements/now
implementando redis

--- a/redis.conf
+++ b/redis.conf
@@ -1,6 +1,6 @@
 # Redis configuration file example
 
 # General configuration
-maxmemory 70mb
+maxmemory 1gb
 maxmemory-policy allkeys-lru
 appendonly yes
