--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,8 @@ services:
 networks:
   sibhapi-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.66.0.0/16
 volumes:
   redis-data:
