--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.20.0",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
