--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.810.0",
+    "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@joi/date": "^2.1.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
