--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@aws-sdk/client-s3": "^3.810.0",
     "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@joi/date": "^2.1.1",
+    "@msgpack/msgpack": "^3.1.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.20.0",
+    "express": "^4.21.2",
+    "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
@@ -27,6 +29,7 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "npm": "^11.4.1",
     "pg": "^8.12.0",
     "pg-native": "^3.1.0",
     "supertest": "^7.0.0"
