--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "npm": "^11.4.1",
     "pg": "^8.12.0",
     "pg-native": "^3.1.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
