--- a/package.json
+++ b/package.json
@@ -28,15 +28,22 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "npm": "^11.4.1",
     "pg": "^8.12.0",
     "pg-native": "^3.1.0",
+    "prom-client": "^15.1.3",
     "supertest": "^7.0.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.1.4"
+  },
+  "_moduleAliases":{
+    "@middlewares": "middlewares",
+    "@routes": "routes",
+    "@modules": "modules"
   }
 }
